# Paperboy-LilyGO-T5

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  PICboy.c  audio.c  audio.h  audio_pdm.c  audio_poly_pwm.c  audio_pwm.c  background.h  battery.c  battery.h  blink_example_main.c  gbemu.c  gbemu.h  main.c  paperboy_bg.h  paperboy_config.h  profiler.c  profiler.h  sample_rom.c  sample_rom.h  serial_input.c  serial_input.h  touch.c  touch.h  ui.c  ui.h  walnut_cgb.h
main/crankboy_core/: paperboy_crankboy_compat.h  peanut_gb.h  peanut_gb_core.h
main/crankboy_core/pgb/: pgb_common.h  pgb_v1.h  pgb_v2.h  pgb_v3.h  pgb_v4.h
main/fastepd/: FastEPD.h  FastEPD.inl  arduino_io.inl  bb_ep_gfx.inl
main/lilygo_epd/: i2s_data_bus.c
main/minigb_apu/: minigb_apu.c  minigb_apu.h
main/msg/: msg.c  msg.h
main/peanut_gb/: paperboy_gb.c  paperboy_gb.h  peanut_gb.h
